--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "nanoid": "^5.1.5"
+    "nanoid": "^5.1.5",
+    "nodemon": "^3.1.10"
   }
 }
